Bug 836786 - Allow mousemove events to propagate from windowless plugins. r=josh